--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,7 +15,26 @@ and open the template in the editor.
     </head>
     <body>
         <div class="container">
-            
+            <p>container</p>
+            <div class="row">
+                <p>row</p>
+                <div class="col-xs-10">
+                    <p>col-xs-10</p>
+                    <div class="row">
+                        <p>row</p>
+                        <div class="col-xs-3"></div>
+                        <div class="col-xs-9"></div>
+                    </div>
+                    <div class="row">
+                        <p>row</p>
+                        <div class="col-xs-3"></div>
+                        <div class="col-xs-9"></div>
+                    </div>
+                </div>
+                <div class="col-xs-2">
+                    <p>col-xs-2</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
